--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,10 @@ img {
 .banner {
   padding: 200px 0;
   text-align: center;
-  background-color: var(--primary-background-color);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../images/background.jpg');
+  background-color: #c4c4c4;
+  background-size: cover;
 }
 .banner-title {
   margin: 0 auto 30px;
@@ -153,8 +156,14 @@ img {
 .banner-buttons:focus {
   background-color: #188ce8;
 }
-.features-item {
+
+.features-item-icon {
+  padding: 25px 100px;
   width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+  background: #f5f4fa;
+  border-radius: 4px;
 }
 .features-item:not(:nth-child(4n)) {
   margin-right: 30px;
