--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ img {
   margin-right: 30px;
 }
 .team-card-container {
-  padding: 30px 0;
+  padding: 30px 32px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14),
     0 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0 0 4px 4px;
@@ -239,11 +239,38 @@ img {
   letter-spacing: 0.03em;
 }
 .team-card-text {
+  margin-bottom: 16px;
   color: var(--primary-sonic-color);
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
+}
+.social-list {
+  display: flex;
+  justify-content: center;
+}
+.social-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: #2196f3;
+}
+.social-list-link:hover .social-list-icon,
+.social-list-link:focus .social-list-icon {
+  fill: var(--primary-white-color);
+}
+.social-list-icon {
+  fill: #afb1b8;
 }
 .clients-list {
   display: flex;
@@ -251,6 +278,9 @@ img {
 
 .clients-item:not(:last-child) {
   margin-right: 30px;
+}
+.clients-item-icon {
+  fill: #afb1b8;
 }
 .clients-item-link {
   display: flex;
@@ -261,6 +291,15 @@ img {
   width: 170px;
   height: 92px;
 }
+.clients-item-link:hover,
+.clients-item-link:focus {
+  border: 1px solid var(--primary-blue-color);
+}
+.clients-item-link:hover .clients-item-icon,
+.clients-item-link:focus .clients-item-icon {
+  fill: var(--primary-blue-color);
+}
+
 /* FOOTER STUDIO */
 .site-footer {
   background-color: var(--primary-background-color);
