--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ img {
 }
 .contact-header-link-icon {
   margin-right: 10px;
+  fill: var(--primary-sonic-color);
 }
 .contact-header-link:hover .contact-header-link-icon,
 .contact-header-link:focus .contact-header-link-icon {
@@ -305,6 +306,13 @@ img {
   background-color: var(--primary-background-color);
   padding: 60px 0;
 }
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+.address-container {
+  margin-right: 70px;
+}
 .address {
   margin-top: 20px;
 }
@@ -329,6 +337,38 @@ img {
 }
 .contact-footer-link.transparent {
   color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-social-text {
+  margin-bottom: 20px;
+  color: var(--primary-white-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.footer-social-list {
+  display: flex;
+}
+.footer-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+.footer-social-item-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+.footer-social-item-link:hover,
+.footer-social-item-link:focus {
+  background-color: var(--primary-blue-color);
+}
+.footer-social-link-icon {
+  fill: var(--primary-white-color);
 }
 /* PORTFOLIO PAGE MAIN  */
 .portfolio-item:not(:last-child) {
@@ -357,6 +397,8 @@ img {
 .portfolio-buttons:focus {
   background-color: var(--primary-blue-color);
   color: var(--primary-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-list {
   display: flex;
