--- a/css/style.css
+++ b/css/style.css
@@ -404,6 +404,10 @@ img {
   display: flex;
   flex-wrap: wrap;
 }
+.portfolio-card:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .portfolio-card-container {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
