сохраняет готовый проект

--- a/css/style.css
+++ b/css/style.css
@@ -134,12 +134,13 @@ img {
   padding: 24px 0;
 }
 .banner {
+  max-width: 1600px;
+  margin: 0 auto;
   padding: 200px 0;
   text-align: center;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/background.jpg');
   background-color: #c4c4c4;
-  background-size: cover;
 }
 .banner-title {
   margin: 0 auto 30px;
