--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,9 @@ img {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/background.jpg');
   background-color: #c4c4c4;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .banner-title {
   margin: 0 auto 30px;
@@ -168,14 +171,17 @@ img {
 .banner-buttons:focus {
   background-color: #188ce8;
 }
-
-.features-item-icon {
-  padding: 25px 100px;
-  width: 270px;
-  height: 120px;
+.features-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 30px;
-  background: #f5f4fa;
+  height: 120px;
+  background-color: #f5f4fa;
   border-radius: 4px;
+}
+.features-item {
+  width: 270px;
 }
 .features-item:not(:nth-child(4n)) {
   margin-right: 30px;
@@ -405,7 +411,11 @@ img {
   display: flex;
   flex-wrap: wrap;
 }
-.portfolio-card:hover {
+.portfolio-card-link {
+  display: block;
+}
+.portfolio-card-link:hover,
+.portfolio-card-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
